# GCEP

./: .gitignore  CMakeLists.txt  Doxyfile  Helpers_8hpp_source.html  README.md  RHI_8hpp_source.html  annotated.html  annotated_dup.js  application_8hpp.html  application_8hpp.js  application_8hpp_source.html  archive_8hpp_source.html  archive__field_8hpp_source.html  audio_8hpp_source.html  audio__buffer_8hpp_source.html  audio__control__panel_8hpp_source.html  audio__device_8hpp_source.html  audio__listener_8hpp_source.html  audio__mixer_8hpp_source.html  audio__source_8hpp_source.html  audio__system_8hpp_source.html  audio__voice_8hpp_source.html  binary__component__serializer_8hpp_source.html  binary__scene__snapshot_8hpp_source.html  bplayer__interface__impl_8hpp_source.html  camera_8hpp.html  camera_8hpp.js  camera_8hpp_source.html  camera__component_8hpp_source.html  camera__manager_8hpp_source.html  classPhysicsContactListener-members.html  classPhysicsContactListener.html  classes.html  classgcep_1_1Application-members.html  classgcep_1_1Application.html  classgcep_1_1Application.js  classgcep_1_1AudioBuffer-members.html  classgcep_1_1AudioBuffer.html  classgcep_1_1AudioDevice-members.html  classgcep_1_1AudioDevice.html  (+563 more)
.claude/: settings.local.json
.github/workflows/: docs.yml  main.yml
Assets/Shaders/: Base_Shader.slang  Compute_FrustumCulling.slang  Compute_Lighting.slang  Compute_TAA.slang  Debug_Physics.slang  Gizmo_LightSprite.slang  Gizmo_SpotCone.slang  Grid.slang
CMake/: compile_shaders.cmake  copy_textures.cmake  download_compiler.cmake
Editor/: Helpers.hpp  main.cpp
Editor/Application/: application.cpp  application.hpp
Editor/Camera/: camera.cpp  camera.hpp
Editor/ContentBrowser/: ContentBrowser.cpp  ContentBrowser.hpp  content_browser.cpp  content_browser.hpp
Editor/ImGUIManager/: imgui_manager.cpp  imgui_manager.hpp
Editor/Inputs/: Inputs.cpp  Inputs.hpp  inputs.cpp  inputs.hpp
Editor/Prefab/: prefab_system.cpp  prefab_system.hpp
Editor/ProjectLoader/: project_loader.cpp  project_loader.hpp
Editor/SceneUtils/: scene_util.cpp  scene_util.hpp
Editor/UIManager/: script_panel.hpp  ui_manager.cpp  ui_manager.hpp
Editor/UI_Panels/: component_drawers.cpp  component_drawers.hpp  editor_context.hpp  ipanel.hpp  selection_manager.hpp
Editor/Window/: Window.cpp  Window.hpp  ui_manager.cpp  ui_manager.hpp  window.cpp  window.hpp
Engine/Audio/: audio.hpp  audio_buffer.cpp  audio_buffer.hpp  audio_device.cpp  audio_device.hpp  audio_listener.cpp  audio_listener.hpp  audio_mixer.cpp  audio_mixer.hpp  audio_source.cpp  audio_source.hpp  audio_system.cpp  audio_system.hpp  audio_voice.hpp
Engine/CameraManager/: camera_manager.cpp  camera_manager.hpp
Engine/Core/: config.hpp
Engine/ObjParser/: ObjParser.cpp  ObjParser.hpp  obj_parser.cpp  obj_parser.hpp
Engine/RHI/: RHI.hpp
Scripts/: CMakeLists.txt  PlayerController.cpp  README.md  SampleScript.cpp  Script0.cpp  Script1.cpp  ScriptExports.cpp  ScriptRegistryUtils.hpp
Tools/ScriptingRunner/: CMakeLists.txt  main.cpp
UnitTests/: CMakeLists.txt
UnitTests/tests/: CMakeLists.txt  PhysicsTest.cpp
docs/html/: _archive_field_8hpp_source.html  _helpers_8hpp.html  _helpers_8hpp.js  _helpers_8hpp_source.html  _log_8hpp_source.html  _mesh_8hpp_source.html  _mesh_cache_8hpp_source.html  _obj_parser_8hpp_source.html  _r_h_i_8hpp_source.html  _script_a_p_i_8hpp_source.html  _script_component_8hpp_source.html  _script_host_8hpp_source.html  _script_system_8hpp_source.html  _shared_library_8hpp_source.html  _vulkan_command_list_8hpp_source.html  _vulkan_device_8hpp_source.html  _vulkan_frame_context_8hpp_source.html  _vulkan_light_system_8cpp.html  _vulkan_light_system_8hpp.html  _vulkan_light_system_8hpp.js  _vulkan_light_system_8hpp_source.html  _vulkan_r_h_i_8hpp_source.html  _vulkan_r_h_i__private___descriptors_8hpp_source.html  _vulkan_r_h_i__private___geometry_8hpp_source.html  _vulkan_r_h_i__private___gizmos_8hpp_source.html  _vulkan_r_h_i__private___helpers_8hpp_source.html  _vulkan_r_h_i__private___offscreen_8hpp_source.html  _vulkan_r_h_i__private___pipelines_8hpp_source.html  _vulkan_r_h_i__private___t_a_a_8hpp_source.html  _vulkan_r_h_i_data_types_8hpp_source.html  _vulkan_swapchain_8hpp_source.html  _vulkan_texture_8hpp_source.html  annotated.html  annotated_dup.js  application_8hpp.html  application_8hpp.js  application_8hpp_source.html  archive_8hpp_source.html  archive_8inl_source.html  audio_8hpp_source.html  (+518 more)
docs/latex/: _archive_field_8hpp_source.tex  _helpers_8hpp.tex  _helpers_8hpp_source.tex  _log_8hpp_source.tex  _mesh_8hpp_source.tex  _mesh_cache_8hpp_source.tex  _obj_parser_8hpp_source.tex  _r_h_i_8hpp_source.tex  _script_a_p_i_8hpp_source.tex  _script_component_8hpp_source.tex  _script_host_8hpp_source.tex  _script_system_8hpp_source.tex  _shared_library_8hpp_source.tex  _vulkan_command_list_8hpp_source.tex  _vulkan_device_8hpp_source.tex  _vulkan_frame_context_8hpp_source.tex  _vulkan_light_system_8cpp.tex  _vulkan_light_system_8hpp.tex  _vulkan_light_system_8hpp_source.tex  _vulkan_r_h_i_8hpp_source.tex  _vulkan_r_h_i__private___descriptors_8hpp_source.tex  _vulkan_r_h_i__private___geometry_8hpp_source.tex  _vulkan_r_h_i__private___gizmos_8hpp_source.tex  _vulkan_r_h_i__private___helpers_8hpp_source.tex  _vulkan_r_h_i__private___offscreen_8hpp_source.tex  _vulkan_r_h_i__private___pipelines_8hpp_source.tex  _vulkan_r_h_i__private___t_a_a_8hpp_source.tex  _vulkan_r_h_i_data_types_8hpp_source.tex  _vulkan_swapchain_8hpp_source.tex  (+209 more)
html/: doxygen_crawl.html  navtreedata.js  pages.html
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_19.js  all_1a.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_12.js  classes_13.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  (+57 more)
(+419 files in other folders)
